fix: [SAPP-3618] version text and layout is shifted on change

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -630,7 +630,10 @@ textarea.is-invalid:focus {
 }
 
 .hover-transition-font-weight {
-  transition: font-weight 0.1s ease;
+  transition: text-shadow 0.2s ease-in-out;
+  &:hover {
+    text-shadow: 0px 0px 1px #ffb800;
+  }
 }
 
 .ant-tooltip-inner {
